Remove SSE implementation guides and related files. Update environment template to include Brave Search API configuration. Enhance backend to support real-time workflow progress streaming via Server-Sent Events (SSE) with new endpoint `/api/workflows/{evaluation_id}/stream`. Refactor agent implementations to utilize single comprehensive searches for compliance, finance, and interoperability evaluations. Improve error handling and event emission for better real-time updates. Update frontend components for live visualization of agent workflows and streamline evaluation page interactions.

--- a/env.template
+++ b/env.template
@@ -27,6 +27,14 @@ BACKEND_HOST=0.0.0.0
 BACKEND_PORT=8000
 
 # ===================================
+# Web Search Configuration (Brave Search API)
+# ===================================
+# Brave Search API (Free tier: 1 req/sec, 1000 req/month)
+SEARCH_PROVIDER=brave
+BRAVE_KEY=your-brave-api-key-here
+SEARCH_MIN_INTERVAL=1.1
+
+# ===================================
 # File Upload Configuration
 # ===================================
 UPLOAD_DIR=uploads
